# ru_webapi_codebase

./: Cargo.toml  README.md  prj.cursorrules
models/: forms.txt  models.txt  responses.txt
outputs/: forms.dot  forms.ts  install.sql  modal.dot  response.dot  response.ts
scripts/: create.sh  sync.sh
src/: app.rs  cli.rs  conf.rs  errors.rs  forms.rs  main.rs  models.rs  redis.rs  response.rs  types.rs  utilities.rs
src/example/: handlers.rs  mod.rs  services.rs
src/services/: example_service.rs  mod.rs
templates/: forms.txt  models.txt  responses.txt  sql.txt  typescript.txt
