[package]
name = "ru_webapi_codebase"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = "0.8.3"
clap = { version = "4.5.36", features = ["derive"] }
ru-di = "0.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3.31"
redis = { version = "0.29.5", features = ["tokio-comp"] }
reqwest = {version = "0.12.15", default-features = false, features = ["rustls-tls", "json"] }
chrono = "0.4.40"
http = "1.3.1"
log = "0.4.27"
simple_logger = "5.0.0"
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }
hmac = "0.12.1"
sha1 = "0.10.6"
base64 = "0.22.1"
libaes = "0.7.0"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
aliyun-sts-rust-sdk = { version ="0.1.1", path="/Users/alex/Projects/workspace/aliyun-sts-rust-sdk"}
sea-orm = { version = "1.1.10" , features = ["runtime-tokio", "sqlx-all"] }
sqlx-postgres = "0.8.5"

[dev-dependencies]
sea-orm-cli = "1.1.10"